src/objects/RallyFieldMapping__mdt.object
<CustomObject>
    <description>For Rally Field mapping with salesforce field mapping</description>
    <fields>
        <fullName>Default__c</fullName>
        <description>Default value for Defect or Enhancement</description>
        <inlineHelpText>Default value for Defect or Enhancement</inlineHelpText>
        <label>Default</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rally_Field__c</fullName>
        <description>Field From Rally which is mapped to Salesforce field</description>
        <inlineHelpText>Field From Rally which is mapped to Salesforce field</inlineHelpText>
        <label>Rally Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject__c</fullName>
        <description>For which sobject is this mapping for (Feature, Case)</description>
        <label>SObject</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Case</fullName>
                    <default>true</default>
                    <label>Case</label>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salesforce_Field__c</fullName>
        <description>Field from Salesforce</description>
        <inlineHelpText>Field from Salesforce</inlineHelpText>
        <label>Salesforce Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>RallyFieldMapping</label>
    <pluralLabel>RallyFieldMappings</pluralLabel>
</CustomObject>